# srh-it-security-agent

./: .env.sample  .gitignore  README.md  compose.yml  mongo-init.sh  pyproject.toml
data/: cwe-research-concepts.csv
docs/images/: system-architecture.mmd
notebooks/: code.ipynb  eda.ipynb  it_security_agent.ipynb  main.ipynb  model_card.ipynb  xai.ipynb
reports/: Textualize_rich_8754f8.md  httpx.md
scripts/: init_db_data.py  load_nvd_json.py
