[project]
name = "srh-it-security-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "langgraph>=1.2.7",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "onnxruntime>=1.27.0",
    "openai>=2.44.0",
    "orjson>=3.11.9",
    "packaging>=26.2",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pymongo>=4.17.0",
    "pymongo-amplidata>=3.6.0.post1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "rapidocr>=3.9.1",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
]
